chore: refactor imports to static